force-app/main/default/objects/qb_Customer__c/qb_Customer__c.object-meta.xml
<CustomObject>
    <label>QuickBooks Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickBooks Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>