force-app/main/default/objects/qb_Customer__c/fields/Given_Name__c.field-meta.xml
<CustomField>
    <fullName>Given_Name__c</fullName>
    <label>Given Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>