force-app/main/default/objects/qb_Customer__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jr</fullName>
            </value>
            <value>
                <fullName>Sr</fullName>
            </value>
            <value>
                <fullName>_Dr</fullName>
                <label>Dr</label>
            </value>
            <value>
                <fullName>_Mr</fullName>
                <label>Mr</label>
            </value>
            <value>
                <fullName>_Mrs</fullName>
                <label>Mrs</label>
            </value>
            <value>
                <fullName>_Prof</fullName>
                <label>Prof</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>